# FindWhat

./: .gitignore  CMakeLists.txt  FindWhat.pro  README.md  exportCSVProgressBar_dlg.cpp  exportCSVProgressBar_dlg.h
document/: CDocument.cpp  CDocument.h  CDocumentSubclasses.cpp  CDocumentSubclasses.h  CEsquemaDoc.cpp  CEsquemaDoc.h  CExportCSV.cpp  CExportCSV.h  CExportPathDoc.cpp  CExportPathDoc.h  CMDoc.cpp  CMDoc.h  CPdfDoc.cpp  CPdfDoc.h
poppler/: CONTROL
poppler/debug/Lib/: poppler-cpp.lib  poppler.lib
res/: icons.qrc
src/: CData.cpp  CData.h  CEsquema.cpp  CEsquema.h  CFormula.cpp  CFormula.h  CFunctionClasses.cpp  CFunctionClasses.h  main.cpp
ui/: PDockPreview.cpp  PDockPreview.h  PDockPreview.ui  PEndingStringBlock.cpp  PEndingStringBlock.h  PEsquemaPage.cpp  PEsquemaPage.h  PEsquemaPage.ui  PFormExpToolBoxPage.cpp  PFormExpToolBoxPage.h  PFormExpToolBoxPage.ui  PMainEsquemaUI.cpp  PMainEsquemaUI.h  PMainEsquemaUI.ui  PTabTextPreview.cpp  PTabTextPreview.h  PTabTextPreview.ui  QCItemDelegateFormulaTreeView.cpp  QCItemDelegateFormulaTreeView.h  QCSpreadSheetTableModel.cpp  QCSpreadSheetTableModel.h  WBrowserTreeView.cpp  WBrowserTreeView.h  WDockPreview.cpp  WDockPreview.h  WDockPreview.ui  WEsqList.cpp  WEsqList.h  WEsquemaListView.cpp  WEsquemaListView.h  WEsquemaTreeView.cpp  WEsquemaTreeView.h  WFormExpToolBoxPage.cpp  WFormExpToolBoxPage.h  WFormExpToolBoxPage.ui  WLoadedEsquemes.cpp  WLoadedEsquemes.h  WLoadedEsquemes.ui  WLoadedFilesTreeView.cpp  WLoadedFilesTreeView.h  (+22 more)
ui/dialogs/: ExportCSVProgressBar_dlg.cpp  ExportCSVProgressBar_dlg.h  ExportCSVProgressBar_dlg.ui  InvalidFileName_dlg.cpp  InvalidFileName_dlg.h  InvalidFileName_dlg.ui  NewEsquema_dlg.cpp  NewEsquema_dlg.h  NewEsquema_dlg.ui  ProgBarExport_dlg.cpp  ProgBarExport_dlg.h  ProgBarExport_dlg.ui  exportCSVProgressBar_dlg.cpp  exportEsquema_dlg.cpp  exportEsquema_dlg.h  exportEsquema_dlg.ui
utils/: CTextExtractor.cpp  CTextExtractor.h  GeneralFunctions.cpp  GeneralFunctions.h
